<resources>
    <string name="app_name">Super Sam</string>
    <string name="login_title">Super Sam</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="need_help">Need help?</string>
    <string name="create_account_title">Marvel</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="country">Country</string>
</resources>
