<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:gravity="center_horizontal"
    tools:context="br.com.wille.supersam.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/login_title"
        android:textColor="@android:color/white"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/background_input_login"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/background_input_login"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="14dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCreateAccountId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@android:color/transparent"
                android:text="@string/create_an_account"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:text="@string/need_help"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

</FrameLayout>